--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,17 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 40px;
     left: 40px;
 }
 
-.logo {
+.header__logo {
     height: 35px;
 }
 
-.text-area{
+.header__text-area{
     position: absolute;
     top: 40%;
     left: 50%;
@@ -59,14 +59,14 @@ body {
     margin-bottom: 50px;
 }
 
-.primary-heading-main{
+.primary-heading--main{
     display: block;
     font-size: 3em;
     letter-spacing: 35px;
     animation: moveInLeft 1s ease-out;
 }
 
-.primary-heading-sub{
+.primary-heading--sub{
     display: block;
     font-size: 1.15em;
     letter-spacing: 18px;
@@ -96,7 +96,7 @@ body {
     cursor: pointer;
 }
 
-.btn-white{
+.btn--white{
     background-color: #fff;
     color: #777;
 }
@@ -114,7 +114,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after{
+.btn--white::after{
     background-color: #fff;
 }
 
@@ -123,7 +123,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveToBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
